# ageis-flow

./: .gcloudignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  server.py
aegis-dashboard/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
aegis-dashboard/app/: globals.css  layout.tsx  page.tsx
agents/: graph.py  nodes.py  state.py
infrastructure/terraform/: crime.py  main.tf
mcp_server/: database.py  main.py
